# SOS-V2020

./: reset.sh
kernel/: gcc.cmake
kernel/tools/: invocation_header_gen.py  syscall_header_gen.py
projects/aos/: CMakeLists.txt  init-build.sh  settings.cmake
projects/aos/apps/clock_test/: CMakeLists.txt
projects/aos/apps/clock_test/src/: clock_test.c
projects/aos/apps/tty_test/src/: tty_test.c  ttyout.c
projects/aos/libclock/src/: clock.c  device.c
projects/aos/sos/: CMakeLists.txt
projects/aos/sos/src/: main.c  network.c
projects/musllibc/src/fcntl/: fcntl.c
projects/picotcp/modules/: pico_ipv4.c
